--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="style-src 'self' 'unsafe-inline'" />
+    <meta http-equiv="Content-Security-Policy" content="font-src 'self'" />
+    <meta http-equiv="Content-Security-Policy" content="media-src 'self' " />
+    <meta http-equiv="Content-Security-Policy" content="object-src 'self' " />
+    <meta http-equiv="Content-Security-Policy" content="frame-src 'self' " />
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'" />
+    <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:" />
+    <meta name="referrer" content="no-referrer" />
     <title>MeetMates</title>
     <base href="/" />
     <link rel="icon" type="image/png" href="./favicon.png" />
