--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="Content-Security-Policy" content="media-src 'self' " />
     <meta http-equiv="Content-Security-Policy" content="object-src 'self' " />
     <meta http-equiv="Content-Security-Policy" content="frame-src 'self' " />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'" />
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
     <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:" />
     <meta name="referrer" content="no-referrer" />
     <title>MeetMates</title>
